--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 #header {
-	background-color: #000000;
+	background-color: #f5f5f5;
 	height: 20%;
 	margin-right: 20px;
 
@@ -17,7 +17,7 @@
 }
 
 body {
- background-color: #D3D3D3;
+ background-color: #e1e1e1;
 }
 
 #copy {
@@ -26,7 +26,7 @@ body {
 
 #main_body {
 
-	background-color: #FFFFFF;
+	background-color: #f5f5f5;
 	height: 75%;
 	display: block;
 	left: 8%;
@@ -37,13 +37,13 @@ body {
 
 #main_body iframe {
 	margin-left: 15%;
+	margin-top: 5%;
 }
 
 #footer {
 
-		background-color: #000000;
+		background-color: #f5f5f5;
 	height: 20%;
-	color: white;
 
 	display: block;
 	left: 5%;
